--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,13 @@
   src: url(/chulabhornlikittext-regular.woff2) format('woff2');
 }
 
+button,
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: "Comic Sans MS", "Chulabhornlikit", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
 }
 
 a {
